package com.example.battleship;


public class RowItem {
    private String matchMode;
    private String matchResult;
    private String playerName;
    private String opponentName;

    public String getMatchMode() { return matchMode; }

    public void setMatchMode(String matchMode) { this.matchMode = matchMode; }

    public String getMatchResult() { return matchResult; }

    public void setMatchResult(String matchResult) { this.matchResult = matchResult; }

    public String getPlayerName() { return playerName; }

    public void setPlayerName(String playerName) { this.playerName = playerName; }

    public String getOpponentName() { return opponentName; }

    public void setOpponentName(String opponentName) { this.opponentName = opponentName; }
}
